<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:gravity="center_horizontal" android:orientation="vertical" android:weightSum="1">
    <LinearLayout android:id="@+id/linearLayout1" android:orientation="vertical" android:layout_width="200dp" android:gravity="center_horizontal" android:layout_height="wrap_content">
        <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nickname"></TextView>
        <EditText android:id="@+id/nickNameId" android:layout_height="wrap_content" android:layout_width="118dp">
        	<requestFocus></requestFocus>
        </EditText>
        <TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="@string/enterPin"></TextView>
        <EditText android:id="@+id/pinId" android:layout_height="wrap_content" android:layout_width="117dp">
            
        </EditText>
        <Button android:layout_width="wrap_content" android:id="@+id/btEnterPinId" android:layout_height="wrap_content" android:text="@string/enter"></Button>
    </LinearLayout>
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/waitress"></RelativeLayout>
    
</LinearLayout>
